--- a/Clipsy/res/layout/file_chooser.xml
+++ b/Clipsy/res/layout/file_chooser.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/textView2"
         android:maxWidth="150dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView2"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/textView1"
         android:maxWidth="150dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -72,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/textView3"
         android:maxWidth="150dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -92,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/textView5"
         android:maxWidth="150dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
