--- a/Clipsy/res/layout-land/main_menu.xml
+++ b/Clipsy/res/layout-land/main_menu.xml
@@ -6,28 +6,8 @@
     android:orientation="horizontal" >
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/bNewVid"
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:layout_above="@+id/bEditVid"
-            android:layout_alignRight="@+id/bEditVid"
-            android:layout_marginBottom="20dp"
-            android:text="New"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/bEditVid"
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:layout_above="@+id/bCamera"
-            android:layout_alignRight="@+id/bCamera"
-            android:layout_marginBottom="20dp"
-            android:text="Edit"
-            android:textSize="20sp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <ImageButton
             android:id="@+id/bCamera"
@@ -35,9 +15,20 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginRight="30dp"
             android:src="@drawable/b_camera" />
+
+        <Button
+            android:id="@+id/bNewVid"
+            android:layout_width="75dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/bCamera"
+            android:layout_alignLeft="@+id/bCamera"
+            android:layout_marginBottom="20dp"
+            android:text="New"
+            android:textSize="20sp" />
+
     </RelativeLayout>
 
 </LinearLayout>
