--- a/Clipsy/res/layout/file_chooser.xml
+++ b/Clipsy/res/layout/file_chooser.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
+        android:paddingBottom="5dp"
         android:text="Filename:"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -57,23 +58,24 @@
         android:layout_centerHorizontal="true"
         android:text="Select Video" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fc_videoName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/no_video" />
-
     <Button
         android:id="@+id/fc_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
         android:text="Continue" />
+    
+    
+    <ImageView
+        android:id="@+id/thumbView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fc_selectVideo"
+        android:layout_below="@id/textView2"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/no_video" />
 
 </RelativeLayout>
