--- a/Clipsy/res/layout/file_chooser.xml
+++ b/Clipsy/res/layout/file_chooser.xml
@@ -49,33 +49,33 @@
         android:paddingBottom="5dp"
         android:text="Filename:"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <Button
-        android:id="@+id/fc_selectVideo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fc_continue"
-        android:layout_centerHorizontal="true"
-        android:text="Select Video" />
-
-    <Button
-        android:id="@+id/fc_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Continue" />
     
     
     <ImageView
         android:id="@+id/thumbView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/fc_selectVideo"
         android:layout_below="@id/textView2"
+        android:layout_toLeftOf="@+id/fc_selectVideo"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
         android:scaleType="centerInside"
         android:src="@drawable/no_video" />
+
+    <Button
+        android:id="@+id/fc_continue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/thumbView"
+        android:layout_alignRight="@+id/fc_selectVideo"
+        android:text="Continue" />
+
+    <Button
+        android:id="@+id/fc_selectVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fc_continue"
+        android:layout_alignRight="@+id/fc_videoName"
+        android:text="Select Video" />
 
 </RelativeLayout>
