--- a/Clipsy/res/layout/activity_audio_fragment.xml
+++ b/Clipsy/res/layout/activity_audio_fragment.xml
@@ -2,15 +2,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AudioFragment" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="68dip"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical" >
+
+            <TextView
+                android:id="@+id/mark_start"
+                android:layout_width="wrap_content"
+                android:layout_height="31dip"
+                android:layout_marginLeft="10dip"
+                android:clickable="true"
+                android:gravity="center"
+                android:nextFocusUp="@+id/info"
+                android:text="Start"
+                android:textColor="#99999999"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/starttext"
+                android:layout_width="70dip"
+                android:layout_height="31dip"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="30dip"
+                android:contentDescription="Start"
+                android:gravity="center"
+                android:inputType="number|numberDecimal"
+                android:nextFocusLeft="@+id/zoom_out"
+                android:nextFocusRight="@+id/endtext"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/mark_end"
+                android:layout_width="wrap_content"
+                android:layout_height="31dip"
+                android:clickable="true"
+                android:gravity="center"
+                android:inputType="number|numberDecimal"
+                android:nextFocusUp="@+id/info"
+                android:text="End"
+                android:textColor="#99999999"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/endtext"
+                android:layout_width="70dip"
+                android:layout_height="31dip"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="50dip"
+                android:contentDescription="End"
+                android:gravity="center"
+                android:nextFocusLeft="@+id/starttext"
+                android:nextFocusRight="@+id/save"
+                android:textSize="16sp" />
+
+            <ImageButton
+                android:id="@+id/play"
+                style="@android:style/MediaButton"
+                android:layout_width="52dip"
+                android:layout_height="52dip"
+                android:layout_marginBottom="6dip"
+                android:layout_marginTop="6dip"
+                android:contentDescription="Play"
+                android:nextFocusUp="@+id/info"
+                android:src="@android:drawable/ic_media_play" />
+    </LinearLayout>
 
 </RelativeLayout>
