'End' entry field uses number/decimal entry.

--- a/Clipsy/res/layout/activity_audio_fragment.xml
+++ b/Clipsy/res/layout/activity_audio_fragment.xml
@@ -93,6 +93,7 @@
             android:layout_marginRight="50dip"
             android:contentDescription="End"
             android:gravity="center"
+            android:inputType="number|numberDecimal"
             android:nextFocusLeft="@+id/starttext"
             android:nextFocusRight="@+id/save"
             android:textSize="16sp" />
