--- a/Clipsy/res/layout-land/main_menu.xml
+++ b/Clipsy/res/layout-land/main_menu.xml
@@ -2,13 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/clipsy_splash"
+    android:background="@drawable/background"
     android:orientation="horizontal" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/clipsy_logo_hd" />
+        
         <ImageButton
             android:id="@+id/bCamera"
             android:layout_width="75dp"
