--- a/Clipsy/res/layout/activity_preview.xml
+++ b/Clipsy/res/layout/activity_preview.xml
@@ -3,4 +3,5 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PreviewActivity" />
+    tools:context=".PreviewActivity"
+    android:background="@drawable/background" />
