--- a/Clipsy/res/layout/activity_preview_fragment.xml
+++ b/Clipsy/res/layout/activity_preview_fragment.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PreviewFragment" >
+    tools:context=".PreviewFragment"
+    android:background="@drawable/background" >
 
     <VideoView
         android:id="@+id/previewView"
