--- a/Clipsy/res/layout/file_chooser.xml
+++ b/Clipsy/res/layout/file_chooser.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".FileChooser" >
+    tools:context=".FileChooser"
+    android:background="@drawable/background" >
 
     <TextView
         android:id="@+id/fc_videoName"
