--- a/Clipsy/res/layout/main_menu.xml
+++ b/Clipsy/res/layout/main_menu.xml
@@ -2,13 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/clipsy_splash"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent" >
 
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bNewVid"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="33dp"
+            android:src="@drawable/clipsy_logo_hd" />
+        
         <ImageButton
             android:id="@+id/bCamera"
             android:layout_width="75dp"
@@ -29,6 +39,7 @@
             android:layout_marginBottom="20dp"
             android:text="New"
             android:textSize="20sp" />
+
 
     </RelativeLayout>
 
