--- a/Clipsy/res/layout/viewer.xml
+++ b/Clipsy/res/layout/viewer.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Viewer" >
+    tools:context=".Viewer"
+    android:background="@drawable/background" >
 
     <SeekBar
         android:id="@+id/seekBar"
