--- a/Clipsy/res/layout/file_save.xml
+++ b/Clipsy/res/layout/file_save.xml
@@ -25,25 +25,13 @@
     android:orientation="vertical">
 
     <TextView
-       android:text="@string/ringtone_type_label"
-       android:textColor="#ffffffff"
-       android:textSize="12sp"
-       android:layout_marginLeft="15dip"
-       android:layout_width="wrap_content" 
-       android:layout_height="wrap_content" />
-
-    <Spinner android:id="@+id/ringtone_type"
-       android:layout_marginLeft="10dip"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content" />
-
-    <TextView
-       android:text="@string/ringtone_name_label"
-       android:textColor="#ffffffff"
-       android:textSize="12sp"
-       android:layout_marginLeft="15dip"
-       android:layout_width="wrap_content" 
-       android:layout_height="wrap_content" />
+        android:id="@+id/save_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:text="Name of your trimmed track:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText android:id="@+id/filename"
        android:layout_marginLeft="10dip"
