--- a/Clipsy/res/layout/new_project.xml
+++ b/Clipsy/res/layout/new_project.xml
@@ -16,7 +16,7 @@
         tools:context=".MainActivity" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/save_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -28,7 +28,7 @@
             android:id="@+id/bt_alertdialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView1"
+            android:layout_below="@+id/save_text"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="91dp"
             android:text="Show Alert" />
