Audio clipping and saving works. Clipped track is returned to the Audio fragment, where you can play it/edit again.

--- a/Clipsy/res/layout/activity_audio_fragment.xml
+++ b/Clipsy/res/layout/activity_audio_fragment.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dip"
-            android:text="Ringdroid"
+            android:text="Edit"
             android:textSize="12sp" />
 
         <Button
